<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:overScrollMode="never"
    android:scrollbars="none"
    android:background="@color/appBackgroundBlue"
    tools:context=".LoginActivity">
    //Top Section
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical">
        <ImageView
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:layout_marginTop="80dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/message2"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/Otp_Verifcation"
            android:textColor="@color/appTextColor"
            android:textSize="25sp"
            android:textStyle="bold"
            android:fontFamily="@font/originalsurfer_regular"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="50dp"
            android:gravity="center"
            android:text="@string/Enter_Otp"
            android:textColor="@color/appAlternateTextcolor"
            android:fontFamily="@font/originalsurfer_regular"
            android:textSize="14sp"/>
        <TextView
            android:id="@+id/MobileText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:layout_marginTop="4dp"
            android:gravity="center"
            android:textColor="@color/appTextColor"
            android:textSize="14sp"
            android:textStyle="bold"/>
        //================= Input OTP =====================
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"

            android:gravity="center"
            android:orientation="horizontal">

            <EditText
                android:background="@drawable/backgroundbox"
                android:id="@+id/IputOtp1"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginRight="4dp"
                android:gravity="center"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="1"
                android:textColor="@color/appTextColor"
                android:textSize="24sp"
                android:textStyle="bold"
                tools:ignore="LabelFor"/>
            <EditText
                android:background="@drawable/backgroundbox"
                android:id="@+id/IputOtp2"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginRight="4dp"
                android:gravity="center"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="1"
                android:textColor="@color/appTextColor"
                android:textSize="24sp"
                android:textStyle="bold"
                tools:ignore="LabelFor"/>
            <EditText
                android:background="@drawable/backgroundbox"
                android:id="@+id/IputOtp3"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginRight="4dp"
                android:gravity="center"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="1"
                android:textColor="@color/appTextColor"
                android:textSize="24sp"
                android:textStyle="bold"
                tools:ignore="LabelFor"/>
            <EditText
                android:background="@drawable/backgroundbox"
                android:id="@+id/IputOtp4"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginRight="4dp"
                android:gravity="center"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="1"
                android:textColor="@color/appTextColor"
                android:textSize="24sp"
                android:textStyle="bold"
                tools:ignore="LabelFor"/>
            <EditText
                android:background="@drawable/backgroundbox"
                android:id="@+id/IputOtp5"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginRight="4dp"
                android:gravity="center"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="1"
                android:textColor="@color/appTextColor"
                android:textSize="24sp"
                android:textStyle="bold"
               />
            <EditText
                android:background="@drawable/backgroundbox"
                android:id="@+id/IputOtp6"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:gravity="center"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="1"
                android:textColor="@color/appTextColor"
                android:textSize="24sp"
                android:textStyle="bold"
                tools:ignore="LabelFor"/>

        </LinearLayout>
        //================ Resend OTP=====================
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/No_Otp"
                android:textColor="@color/appAlternateTextcolor"
                android:textSize="14sp"
                android:fontFamily="@font/originalsurfer_regular"/>
            <TextView
                android:id="@+id/ResendOtp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/Resend_OTp"
                android:layout_marginLeft="8dp"
                android:textSize="15sp"
                android:textColor="@color/appTextColor"
                android:textStyle="bold"/>



        </LinearLayout>
        //================ Button verify =================
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/buttongetotp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="30dp"
                android:background="@drawable/backgroundbutton"
                android:text="@string/Verify_Otp"
                android:textStyle="bold"
                android:fontFamily="@font/originalsurfer_regular"/>
            <ProgressBar
                android:id="@+id/progressbar_login"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_gravity="center"
                android:visibility="gone"/>

        </FrameLayout>







    </LinearLayout>


</ScrollView>