<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/appBackgroundBlue"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        >

        <ImageView
            android:id="@+id/image_sendotp"
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:layout_marginTop="80dp"
            android:src="@drawable/message11"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/otp_verification"
            android:textSize="20sp"
            android:textColor="@color/appTextColor"
            android:textStyle="bold"
            android:fontFamily="@font/originalsurfer_regular"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="50dp"
            android:gravity="center"
            android:text="@string/please_enter_valid_phone_number"
            android:textColor="@color/appAlternateTextcolor"
            android:textSize="16sp"
            android:textStyle="bold"
            android:fontFamily="@font/originalsurfer_regular"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="15dp"
            android:layout_marginRight="30dp"
            android:gravity="center"
            android:fontFamily="@font/originalsurfer_regular"
            android:text="@string/enter_mobile_number"
            android:textColor="@color/appTextColor"
            android:textStyle="bold"
            android:textSize="14dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginStart="60dp"
            android:layout_marginEnd="60dp"
            android:background="@drawable/backgroundbox"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:gravity="center"
                android:text="+91"
                android:textColor="@color/appTextColor"
                android:textSize="16sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/input_mobile_number"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:background="@null"
                android:hint="8369927003"
                android:imeOptions="actionDone"
                android:importantForAutofill="no"
                android:inputType="number"
                android:textColor="@color/appAlternateTextcolor"
                android:textSize="16sp"
                android:textStyle="bold"
                />

        </LinearLayout>
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
            android:id="@+id/buttongetotp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"
            android:background="@drawable/backgroundbutton"
            android:text="GET OTP"
            android:textStyle="bold"
            android:fontFamily="@font/originalsurfer_regular"/>
            <ProgressBar
                android:id="@+id/progressbar_otp_verification"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_gravity="center"
                android:visibility="gone"/></FrameLayout>





    </LinearLayout>


</ScrollView>